--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 env_logger = "0.8.2"
 wascc-host = "0.14.0"
+wascc-httpsrv = { version = "0.8.1", features = ["static_plugin"] }
