--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-serde_json = "1.0.61"
-wascc-actor = "0.7.4"
+serde_json = "1.0.64"
+wapc-guest = "0.4.0"
+wasmcloud-actor-core = { version = "0.2.3", features = ["guest"] }
+wasmcloud-actor-http-server = { version = "0.1.2", features = ["guest"] }
 
 [profile.release]
 # Optimize for small code size
