--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+todo-interface = { path = "../todo-interface" }
 wapc-guest = "0.4.0"
 wasmcloud-actor-core = { version = "0.2.3", features = ["guest"] }
 wasmcloud-actor-http-server = { version = "0.1.2", features = ["guest"] }
