--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,13 +1,22 @@
 ---
 labels:
-    sample: wasm-cloud-todo-mvc
+    app: wasm-cloud-todo-mvc
 actors:
     - ./api/target/wasm32-unknown-unknown/debug/api_s.wasm
+    - ./todo/target/wasm32-unknown-unknown/debug/todo_s.wasm
 capabilities:
     - image_ref: wasmcloud.azurecr.io/httpserver:0.12.1
+      link_name: default
+    - image_ref: wasmcloud.azurecr.io/redis:0.11.2
+      link_name: default
 links:
     - actor: ${API_ACTOR:thereisnodefault}
       contract_id: wasmcloud:httpserver
       provider_id: VAG3QITQQ2ODAOWB5TTQSDJ53XK3SHBEIFNK4AYJ5RKAX2UNSCAPHA5M
       values:
           PORT: "8080"
+    - actor: ${TODO_ACTOR:thereisnodefault}
+      contract_id: wasmcloud:keyvalue
+      provider_id: VAZVC4RX54J2NVCMCW7BPCAHGGG5XZXDBXFUMDUXGESTMQEJLC3YVZWB
+      values:
+          URL: redis://0.0.0.0:6379
