--- a/manifest.yaml
+++ b/manifest.yaml
@@ -4,6 +4,7 @@ labels:
 actors:
     - ./api/target/wasm32-unknown-unknown/debug/api_s.wasm
     - ./todo/target/wasm32-unknown-unknown/debug/todo_s.wasm
+    - ./web/target/wasm32-unknown-unknown/debug/web_s.wasm
 capabilities:
     - image_ref: wasmcloud.azurecr.io/httpserver:0.12.1
       link_name: default
@@ -15,6 +16,11 @@ links:
       provider_id: VAG3QITQQ2ODAOWB5TTQSDJ53XK3SHBEIFNK4AYJ5RKAX2UNSCAPHA5M
       values:
           PORT: "8080"
+    - actor: ${WEB_ACTOR:thereisnodefault}
+      contract_id: wasmcloud:httpserver
+      provider_id: VAG3QITQQ2ODAOWB5TTQSDJ53XK3SHBEIFNK4AYJ5RKAX2UNSCAPHA5M
+      values:
+          PORT: "8081"
     - actor: ${TODO_ACTOR:thereisnodefault}
       contract_id: wasmcloud:keyvalue
       provider_id: VAZVC4RX54J2NVCMCW7BPCAHGGG5XZXDBXFUMDUXGESTMQEJLC3YVZWB
