Less output from makefile

--- a/api/Makefile
+++ b/api/Makefile
@@ -4,19 +4,17 @@ RELEASE = target/wasm32-unknown-unknown/release
 
 .PHONY: build
 build: ## Debug build
-	cargo build
-	wash claims sign \
+	@cargo build
+	@wash claims sign \
 		$(DEBUG)/api.wasm \
 		--name api
-	wash claims inspect $(DEBUG)/api_s.wasm
 
 .PHONY: release
 release: ## Release build
-	cargo build --release
-	wash claims sign \
+	@cargo build --release
+	@wash claims sign \
 		$(RELEASE)/api.wasm \
 		--name api
-	wash claims inspect $(RELEASE)/api_s.wasm
 
 .PHONY: help
 help: ## Display this help. Thanks to https://suva.sh/posts/well-documented-makefiles/
