--- a/todo/Makefile
+++ b/todo/Makefile
@@ -4,23 +4,21 @@ RELEASE = target/wasm32-unknown-unknown/release
 
 .PHONY: build
 build: ## Debug build
-	cargo build
-	wash claims sign \
+	@cargo build
+	@wash claims sign \
 		$(DEBUG)/todo.wasm \
 		--name todo \
 		--call-alias todo \
 		--keyvalue
-	wash claims inspect $(DEBUG)/todo_s.wasm
 
 .PHONY: release
 release: ## Release build
-	cargo build --release
-	wash claims sign \
+	@cargo build --release
+	@wash claims sign \
 		$(RELEASE)/todo.wasm \
 		--name todo \
 		--call-alias todo \
 		--keyvalue
-	wash claims inspect $(RELEASE)/todo_s.wasm
 
 .PHONY: help
 help: ## Display this help. Thanks to https://suva.sh/posts/well-documented-makefiles/
