Make HTML render work
Both handlebars and typed-html ran into an error with the wasm3 runtime:

    Error: compiling function overran its stack height limit

According to the docs this can be fixed by rebuilding wasm3 with a
an increased max stack height config. That seems a little complicated
for now.

--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-handlebars = "4.0.0"
+html-escape = "0.2.9"
 todo-interface = { path = "../todo-interface" }
 wapc-guest = "0.4.0"
 wasmcloud-actor-core = { version = "0.2.3", features = ["guest"] }
