--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-html-escape = "0.2.9"
+liquid = "0.22.0"
+once_cell = "1.7.2"
 todo-interface = { path = "../todo-interface" }
 wapc-guest = "0.4.0"
 wasmcloud-actor-core = { version = "0.2.3", features = ["guest"] }
