--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,6 +3,7 @@ labels:
     app: wasm-cloud-todo-mvc
 actors:
     - ./api/target/wasm32-unknown-unknown/debug/api_s.wasm
+    - ./front/target/wasm32-unknown-unknown/debug/front_s.wasm
     - ./todo/target/wasm32-unknown-unknown/debug/todo_s.wasm
     - ./web/target/wasm32-unknown-unknown/debug/web_s.wasm
 capabilities:
@@ -11,16 +12,11 @@ capabilities:
     - image_ref: wasmcloud.azurecr.io/redis:0.11.2
       link_name: default
 links:
-    - actor: ${API_ACTOR:thereisnodefault}
+    - actor: ${FRONT_ACTOR:thereisnodefault}
       contract_id: wasmcloud:httpserver
       provider_id: VAG3QITQQ2ODAOWB5TTQSDJ53XK3SHBEIFNK4AYJ5RKAX2UNSCAPHA5M
       values:
           PORT: "8080"
-    - actor: ${WEB_ACTOR:thereisnodefault}
-      contract_id: wasmcloud:httpserver
-      provider_id: VAG3QITQQ2ODAOWB5TTQSDJ53XK3SHBEIFNK4AYJ5RKAX2UNSCAPHA5M
-      values:
-          PORT: "8081"
     - actor: ${TODO_ACTOR:thereisnodefault}
       contract_id: wasmcloud:keyvalue
       provider_id: VAZVC4RX54J2NVCMCW7BPCAHGGG5XZXDBXFUMDUXGESTMQEJLC3YVZWB
