Use wash up --watch

--- a/front/Makefile
+++ b/front/Makefile
@@ -1,20 +1,26 @@
 .DEFAULT_GOAL:=help
 DEBUG = target/wasm32-unknown-unknown/debug
 RELEASE = target/wasm32-unknown-unknown/release
+VERSION = $$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].version')
+REVISION = $$(test -f $(DEBUG)/front_s.wasm && wash claims inspect $(DEBUG)/front_s.wasm -o json | jq -r '.revision' || echo -1)
 
 .PHONY: build
 build: ## Debug build
 	@cargo build
 	@wash claims sign \
 		$(DEBUG)/front.wasm \
-		--name front
+		--name front \
+		--ver $(VERSION) \
+		--rev $$(( $(REVISION) + 1))
 
 .PHONY: release
 release: ## Release build
 	@cargo build --release
 	@wash claims sign \
 		$(RELEASE)/front.wasm \
-		--name front
+		--name front \
+		--ver $(VERSION) \
+		--rev 0
 
 .PHONY: help
 help: ## Display this help. Thanks to https://suva.sh/posts/well-documented-makefiles/
