--- a/web/Makefile
+++ b/web/Makefile
@@ -1,6 +1,8 @@
 .DEFAULT_GOAL:=help
 DEBUG = target/wasm32-unknown-unknown/debug
 RELEASE = target/wasm32-unknown-unknown/release
+VERSION = $$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].version')
+REVISION = $$(test -f $(DEBUG)/web_s.wasm && wash claims inspect $(DEBUG)/web_s.wasm -o json | jq -r '.revision' || echo -1)
 
 .PHONY: build
 build: ## Debug build
@@ -8,6 +10,8 @@ build: ## Debug build
 	@wash claims sign \
 		$(DEBUG)/web.wasm \
 		--name web \
+		--ver $(VERSION) \
+		--rev $$(( $(REVISION) + 1)) \
 		--call-alias web
 
 .PHONY: release
@@ -16,6 +20,8 @@ release: ## Release build
 	@wash claims sign \
 		$(RELEASE)/web.wasm \
 		--name web \
+		--ver $(VERSION) \
+		--rev 0 \
 		--call-alias web
 
 .PHONY: help
