Use local registry for release builds

--- a/api/Makefile
+++ b/api/Makefile
@@ -23,6 +23,10 @@ release: ## Release build
 		--ver $(VERSION) \
 		--rev 0 \
 		--call-alias api
+	@wash reg push \
+		localhost:5000/api:$(VERSION) \
+		$(RELEASE)/api_s.wasm \
+		--insecure
 
 .PHONY: help
 help: ## Display this help. Thanks to https://suva.sh/posts/well-documented-makefiles/
